# cypher-mcp

./: .fastmcp.yaml  .gitignore  CHANGELOG.md  NOTICE  README.md  fastmcp.json  pyproject.toml  server.json
.github/workflows/: ci.yml  deploy-frontend.yml  release.yml
frontend/: README.md  index.html  package-lock.json  package.json
frontend/functions/: mcp.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Avatar.tsx  DebugPanel.tsx  ErrorBoundary.tsx  Hero.tsx  Nav.tsx  NostrProfilePanel.tsx  NpubGate.tsx  ProfilePage.tsx  QuoteScroller.tsx
frontend/src/components/notebook/: Capabilities.tsx  CapabilityDetail.tsx  Concordance.tsx  Contents.tsx  FrontMatter.tsx  GhStatusDot.tsx  InvariantDetail.tsx  Invariants.tsx  IssueDetail.tsx  IssueStatusGlyph.tsx  Issues.tsx  Metrics.tsx  PatentDetail.tsx  PatentElements.tsx  QueryCatalog.tsx  RecentActivity.tsx  ServiceDetail.tsx  SymbolDetail.tsx  dossier.tsx  icons.tsx  ui.tsx
frontend/src/lib/: avatar.ts  debugLog.ts  githubStatus.ts  graphCache.ts  inlineProof.ts  mcp.ts  pricing.ts  quotes.ts  sessionNsec.ts  theme.ts  time.ts  useSwipeNav.ts
scripts/: backfill_issue_urls.py  backfill_timestamps.cypher  factory_vocabulary.py  seed_factory_vocabulary.py
src/cypher_mcp/: __init__.py  catalog.py  config.py  graph.py  server.py
tests/: test_backfill_issue_urls.py  test_catalog.py  test_eager_materialize.py  test_factory_vocabulary.py  test_graph.py  test_named_tools.py  test_server.py
